[gd_scene load_steps=4 format=3 uid="uid://dxuwdsws842ts"]

[ext_resource type="Script" uid="uid://h01v1ietnemu" path="res://prefabs/ui/pause/pause_layer.gd" id="1_i3dqs"]
[ext_resource type="Shader" uid="uid://dvc35umojhyd" path="res://shaders/ui/fade.gdshader" id="2_vg4ry"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vg4ry"]
shader = ExtResource("2_vg4ry")
shader_parameter/color = Color(0, 0, 0, 0.501961)
shader_parameter/gradient_center = Vector2(0.5, 0.5)
shader_parameter/direction = Vector2(2, 0)

[node name="PauseLayer" type="CanvasLayer"]
layer = 20
script = ExtResource("1_i3dqs")

[node name="PauseMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="ColorRect2" type="ColorRect" parent="PauseMenu"]
material = SubResource("ShaderMaterial_vg4ry")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="PauseMenu/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Spacer" type="Control" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BoldLabel"
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Spacer2" type="Control" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="VBoxContainer2" type="VBoxContainer" parent="PauseMenu/MarginContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_type_variation = &"BoldLabel"
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Throw Minigame Difficulty"

[node name="ThrowMinigameDifficultyOptionButton" type="OptionButton" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
selected = 2
item_count = 4
popup/item_0/text = "Assist"
popup/item_0/id = 0
popup/item_1/text = "Easy"
popup/item_1/id = 1
popup/item_2/text = "Normal"
popup/item_2/id = 2
popup/item_3/text = "Hard"
popup/item_3/id = 3

[node name="ThrowMinigameFastCheckBox" type="CheckBox" parent="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Throw Minigame Fast"

[connection signal="pressed" from="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="item_selected" from="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer2/HBoxContainer/ThrowMinigameDifficultyOptionButton" to="." method="_on_throw_minigame_difficulty_option_button_item_selected"]
[connection signal="toggled" from="PauseMenu/MarginContainer/Control/HBoxContainer/VBoxContainer2/ThrowMinigameFastCheckBox" to="." method="_on_throw_minigame_fast_check_box_toggled"]
